--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=oddam_w_dobre_rece
 
-spring.datasource.url=jdbc:mysql://localhost:3306/charity_bags
+#spring.datasource.url=jdbc:mysql://localhost:3306/charity_bags
+spring.datasource.url=jdbc:mysql://localhost:3306/charity_bags?characterEncoding=utf8mb4&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=pass
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -12,4 +13,20 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
+spring.jpa.properties.hibernate.connection.charSet=utf8mb4
+spring.jpa.properties.hibernate.connection.characterEncoding=utf8mb4
+spring.jpa.properties.hibernate.connection.useUnicode=true
+
 spring.thymeleaf.encoding=UTF-8
+
+# Set the overall logging level (DEBUG, INFO, WARN, ERROR, OFF)
+logging.level.root=INFO 
+
+# Set a specific level for your package or class
+logging.level.com.example.myapp=DEBUG
+
+# Log file location
+logging.file.name=/path/to/my-app.log
+
+# Console output pattern
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
